Agregando carpeta multimedia y pagina para la visualisacion de un producto

--- a/social.css
+++ b/social.css
@@ -128,3 +128,20 @@ body {
     background-color: #ffdb4d;
     color:black;
 }
+
+/* Responsive */
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        gap: 15px;
+        padding: 15px;
+    }
+    
+    .search-container {
+        width: 100%;
+    }
+    
+    .search-bar {
+        width: 100%;
+    }
+}
