--- a/perfil.css
+++ b/perfil.css
@@ -370,3 +370,24 @@ input, textarea {
     font-size: 16px;
     outline: none;
 }
+
+
+/* Responsive */
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        gap: 15px;
+        padding: 15px;
+    }
+    
+    .search-container {
+        width: 100%;
+    }
+    
+    .search-bar {
+        width: 100%;
+    }
+
+    
+    
+}
