correcciones en las rutas y pantallas del super administrador

--- a/views/administrador/main.html
+++ b/views/administrador/main.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dashboard</title>
 </head>
 <body>
-    hola
-    <video width="320" height="240" controls>
-        <source src="video.mp4" type="video/mp4">
-    </video>
+    <h1>Administrador</h1>
 </body>
 </html>
