--- a/views/cliente/carrito.html
+++ b/views/cliente/carrito.html
@@ -29,7 +29,7 @@
                 <i class="fas fa-shopping-cart" style="color: #ffcc00; font-size: 20px;"></i>
                 </a>
             </li>
-            <li><a href="index.php">Cerrar sesión</a></li>
+            <li><a href="../../index.php">Cerrar sesión</a></li>
         </ul>
     </nav>
 
@@ -42,7 +42,7 @@
         
         <ul class="contenido-carrito">
             <li class="producto">
-                <img src="default.jpg" alt="Smartphone XYZ Pro">
+                <img src="../../multimedia/default/default.jpg" alt="Smartphone XYZ Pro">
                 <div class="info">
                     <span>Smartphone XYZ Pro</span>
                     <p>$3,499 MXN</p>
@@ -60,7 +60,7 @@
             </li>
             
             <li class="producto">
-                <img src="default.jpg" alt="Audífonos Bluetooth">
+                <img src="../../multimedia/default/default.jpg" alt="Audífonos Bluetooth">
                 <div class="info">
                     <span>Audífonos Bluetooth</span>
                     <p>$899 MXN</p>
@@ -78,7 +78,7 @@
             </li>
             
             <li class="producto">
-                <img src="default.jpg" alt="Smartwatch Sport">
+                <img src="../../multimedia/default/default.jpg" alt="Smartwatch Sport">
                 <div class="info">
                     <span>Smartwatch Sport</span>
                     <p>$2,199 MXN</p>
