--- a/views/cliente/chat.html
+++ b/views/cliente/chat.html
@@ -30,7 +30,7 @@
                 <i class="fas fa-shopping-cart" style="color: #ffcc00; font-size: 20px;"></i>
                 </a>
             </li>
-            <li><a href="index.php">Cerrar sesión</a></li>
+            <li><a href="../index.php">Cerrar sesión</a></li>
         </ul>
     </nav>
 
