--- a/views/cliente/main.html
+++ b/views/cliente/main.html
@@ -31,7 +31,7 @@
                 <i class="fas fa-shopping-cart" style="color: #ffcc00; font-size: 20px;"></i>
                 </a>
             </li>
-            <li><a href="index.php">Cerrar sesión</a></li>
+            <li><a href="../index.php">Cerrar sesión</a></li>
         </ul>
     </nav>
 
@@ -43,7 +43,7 @@
             <h2>Productos Populares</h2>
             <ol id="ListaPopulares">
                 <li class="producto">
-                    <img src="default.jpg" alt="Producto 1">
+                    <img src="../../multimedia/default/default.jpg" alt="Producto 1">
                     <div class="info">
                         <a href="producto.html">Nombre del producto</a>
                         <p>$150 MXN</p>
@@ -51,7 +51,7 @@
                     </div>
                 </li>
                 <li class="producto">
-                    <img src="default.jpg" alt="Producto 1">
+                    <img src="../../multimedia/default/default.jpg" alt="Producto 1">
                     <div class="info">
                         <a href="producto.html">Nombre del producto</a>
                         <p>$150 MXN</p>
@@ -65,7 +65,7 @@
             <h2>Productos para cotización</h2>
             <ol id="ListaCotizacion">
                 <li class="producto">
-                    <img src="default.jpg" alt="Producto 1">
+                    <img src="../../multimedia/default/default.jpg" alt="Producto 1">
                     <div class="info">
                         <a href="producto.html">Nombre del producto</a>
                         <p>Negociable</p>
@@ -73,7 +73,7 @@
                     </div>
                 </li>
                 <li class="producto">
-                    <img src="default.jpg" alt="Producto 1">
+                    <img src="../../multimedia/default/default.jpg" alt="Producto 1">
                     <div class="info">
                         <a href="producto.html">Nombre del producto</a>
                         <p>Negociable</p>
@@ -89,7 +89,7 @@
             <h2>Productos Recientes</h2>
             <ol id="ListaRecientes">
                 <li class="producto">
-                    <img src="default.jpg" alt="Producto 2">
+                    <img src="../../multimedia/default/default.jpg" alt="Producto 2">
                     <div class="info">
                         <a href="producto.html">Nombre del producto</a>
                         <p>$120 MXN</p>
@@ -97,7 +97,7 @@
                     </div>
                 </li>
                 <li class="producto">
-                    <img src="default.jpg" alt="Producto 2">
+                    <img src="../../multimedia/default/default.jpg" alt="Producto 2">
                     <div class="info">
                         <a href="producto.html">Nombre del producto</a>
                         <p>$120 MXN</p>
