--- a/views/cliente/social.html
+++ b/views/cliente/social.html
@@ -30,7 +30,7 @@
                 <i class="fas fa-shopping-cart" style="color: #ffcc00; font-size: 20px;"></i>
                 </a>
             </li>
-            <li><a href="index.php">Cerrar sesión</a></li>
+            <li><a href="../index.php">Cerrar sesión</a></li>
         </ul>
     </nav>
 
@@ -38,7 +38,7 @@
         <h2>Perfiles</h2>
         <div class="perfiles-container">
             <article class="perfil">
-                <img src="default.jpg" alt="Perfil 1">
+                <img src="../../multimedia/default/default.jpg" alt="Perfil 1">
                 <div class="info">
                     <span>Usuario 1</span>
                     <p>Descripción del perfil 1</p>
@@ -48,7 +48,7 @@
                 </div>
             </article>
             <article class="perfil">
-                <img src="default.jpg" alt="Perfil 2">
+                <img src="../../multimedia/default/default.jpg" alt="Perfil 2">
                 <div class="info">
                     <span>Usuario 2</span>
                     <p>Descripción del perfil 2</p>
@@ -58,7 +58,7 @@
                 </div>
             </article>
             <article class="perfil">
-                <img src="default.jpg" alt="Perfil 3">
+                <img src="../../multimedia/default/default.jpg" alt="Perfil 3">
                 <div class="info">
                     <span>Usuario 3</span>
                     <p>Descripción del perfil 3</p>
@@ -69,7 +69,7 @@
                 </div>
             </article>
             <article class="perfil">
-                <img src="default.jpg" alt="Perfil 4">
+                <img src="../../multimedia/default/default.jpg" alt="Perfil 4">
                 <div class="info">
                     <span>Usuario 4</span>
                     <p>Descripción del perfil 4</p>
