--- a/views/superAdministrador/registro.html
+++ b/views/superAdministrador/registro.html
@@ -9,6 +9,19 @@
 </head>
 
 <body>
+
+    <nav class="navbar">
+        <a href="main.html" class="logo-link">
+            <h1 class="logo">Super Administrador</h1>
+        </a>
+
+        <ul class="nav-links">
+            <li><a href="perfil.php">Perfil</a></li>
+            <li><a href="registro.html">Registro</a></li>
+            <li><a href="../index.php">Cerrar sesión</a></li>
+        </ul>
+    </nav>
+
     <section id="registroSection">
         <div class="contenedorForm">
             <h3>Registro</h3>
@@ -17,7 +30,7 @@
                 <input type="text" id="usuario" placeholder="usuario" name="usuario">
                 <input type="password" id="password" placeholder="contraseña" name="pass">
 
-                <img class="ImageLoaded" src="../multimedia/default/default.jpg" id="profile-image">
+                <img class="ImageLoaded" src="../../multimedia/default/default.jpg" id="profile-image">
                 <label for="input-file">Eliga una imagen</label>
                 <input type="file" accept="image/*" id="input-file" name="avatar">
 
@@ -26,19 +39,6 @@
                 <input type="text" id="materno" placeholder="Apellido materno" name="materno">
 
                 <input type="date" id="nacimiento" name="nacimiento">
-
-                <div class="rol">
-                    <h3>Rol de usuario</h3>
-
-                    <div>
-                        <input type="radio" id="vendedor" name="rol" value="Vendedor">
-                        <label for="vendedor">Vendedor</label>
-                
-                        <input type="radio" id="cliente" name="rol" value="Comprador">
-                        <label for="cliente">Cliente</label>
-                    </div>
-                    
-                </div>
                 
                 <div class="sexo">
                     <h3>Género</h3>
