--- a/views/superAdministrador/registro.css
+++ b/views/superAdministrador/registro.css
@@ -69,7 +69,7 @@ body {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     width: 400px;
-    transform: translateY(120px); /* Mueve hacia abajo */
+    transform: translateY(180px); /* Mueve hacia abajo */
 }
 
 /* Título */
@@ -137,6 +137,19 @@ input[type="submit"]:hover {
     border: 2px solid #ffcc00;
 }
 
+/* Estilos para los radio buttons */
+label {
+    display: block;
+    text-align: left;
+    margin: 10px 0 5px;
+    font-size: 14px;
+    color: #555;
+}
+
+input[type="radio"] {
+    margin-right: 5px;
+}
+
 /* Mejora para el label del input file - AMARILLO */
 label[for="input-file"] {
     display: inline-block;
@@ -155,7 +168,7 @@ label[for="input-file"]:hover {
 }
 
 /* Estilo para los contenedores de privacidad y género */
-.sexo {
+.rol, .sexo {
     padding: 15px;
     border-radius: 8px;
     color: white;
@@ -165,14 +178,14 @@ label[for="input-file"]:hover {
     align-items: center;
 }
 
-.sexo h3 {
+.rol h3, .sexo h3 {
     margin-bottom: 10px;
     font-size: 18px;
     color:whitesmoke;
 }
 
 /* Estilo para los botones de selección */
-.sexo label {
+.rol label, .sexo label {
     background: #333;
     color: #f3f3f3;
     padding: 10px 20px;
@@ -185,11 +198,12 @@ label[for="input-file"]:hover {
 }
 
 /* Cambia de color al pasar el mouse */
-.sexo label:hover {
+.rol label:hover, .sexo label:hover {
     background: #555;
 }
 
 /* Resalta el botón cuando está seleccionado */
+.rol input[type="radio"]:checked + label,
 .sexo input[type="radio"]:checked + label {
     background: #ffcc00;
     color: black;
@@ -197,6 +211,7 @@ label[for="input-file"]:hover {
 }
 
 /* Oculta los radios originales */
+.rol input[type="radio"],
 .sexo input[type="radio"] {
     display: none;
 }
