--- a/views/superAdministrador/registro.html
+++ b/views/superAdministrador/registro.html
@@ -11,7 +11,7 @@
 <body>
 
     <nav class="navbar">
-        <a href="main.html" class="logo-link">
+        <a href="main.php" class="logo-link">
             <h1 class="logo">Super Administrador</h1>
         </a>
 
@@ -25,7 +25,7 @@
     <section id="registroSection">
         <div class="contenedorForm">
             <h3>Registro</h3>
-            <form id="formRegistro" action="../controllers/registroUsuario.php" method="post" enctype="multipart/form-data">
+            <form id="formRegistro" action="../../controllers/registroUsuario.php" method="post" enctype="multipart/form-data">
                 <input type="email" id="email" placeholder="correo" name="email">
                 <input type="text" id="usuario" placeholder="usuario" name="usuario">
                 <input type="password" id="password" placeholder="contraseña" name="pass">
@@ -40,6 +40,16 @@
 
                 <input type="date" id="nacimiento" name="nacimiento">
                 
+                <div class="rol">
+                    <h3>Rol de usuario</h3>
+
+                    <div>
+                        <input type="radio" id="admin" name="rol" value="Admin">
+                        <label for="admin">Administrador</label>
+                    </div>
+                    
+                </div>
+
                 <div class="sexo">
                     <h3>Género</h3>
                     <div>
