--- a/views/vendedor/chat.html
+++ b/views/vendedor/chat.html
@@ -15,21 +15,12 @@
         <a href="main.html" class="logo-link">
             <h1 class="logo">Papu Tienda</h1>
         </a>
-        
-        <div class="search-container">
-            <input type="text" class="search-bar" placeholder="Buscar productos...">
-            <span class="search-icon"><i class="fas fa-search"></i></span>
-        </div>
 
         <ul class="nav-links">
-            <li><a href="social.html">Social</a></li>
+            <li><a href="categorias.html">Categorias</a></li>
             <li><a href="perfil.php">Perfil</a></li>
             <li><a href="chat.html">Chat</a></li>
-            <li>
-                <a href="carrito.html">
-                <i class="fas fa-shopping-cart" style="color: #ffcc00; font-size: 20px;"></i>
-                </a>
-            </li>
+            <li><a href="ventas.html">Ventas</a></li>
             <li><a href="../index.php">Cerrar sesión</a></li>
         </ul>
     </nav>
