--- a/views/cliente/busqueda.html
+++ b/views/cliente/busqueda.html
@@ -23,6 +23,7 @@
 
         <ul class="nav-links">
             <li><a href="social.html">Social</a></li>
+            <li><a href="#">Compras</a></li>
             <li><a href="perfil.php">Perfil</a></li>
             <li><a href="chat.html">Chat</a></li>
             <li>
@@ -30,7 +31,7 @@
                 <i class="fas fa-shopping-cart" style="color: #ffcc00; font-size: 20px;"></i>
                 </a>
             </li>
-            <li><a href="index.php">Cerrar sesión</a></li>
+            <li><a href="../index.php">Cerrar sesión</a></li>
         </ul>
     </nav>
 
@@ -60,7 +61,7 @@
             <ol id="ListaResultados">
                 <!-- Los resultados de búsqueda se insertarán aquí dinámicamente -->
                 <li class="producto">
-                    <img src="multimedia/default/default.jpg" alt="Producto 1">
+                    <img src="../../multimedia/default/default.jpg" alt="Producto 1">
                     <div class="info">
                         <a href="producto.html">Nombre del producto</a>
                         <p>$150 MXN</p>
@@ -68,7 +69,7 @@
                     </div>
                 </li>
                 <li class="producto">
-                    <img src="multimedia/default/default.jpg" alt="Producto 1">
+                    <img src="../../multimedia/default/default.jpg" alt="Producto 1">
                     <div class="info">
                         <a href="producto.html">Nombre del producto</a>
                         <p>$150 MXN</p>
@@ -76,7 +77,7 @@
                     </div>
                 </li>
                 <li class="producto">
-                    <img src="multimedia/default/default.jpg" alt="Producto 1">
+                    <img src="../../multimedia/default/default.jpg" alt="Producto 1">
                     <div class="info">
                         <a href="producto.html">Nombre del producto</a>
                         <p>$150 MXN</p>
@@ -84,7 +85,7 @@
                     </div>
                 </li>
                 <li class="producto">
-                    <img src="multimedia/default/default.jpg" alt="Producto 1">
+                    <img src="../../multimedia/default/default.jpg" alt="Producto 1">
                     <div class="info">
                         <a href="producto.html">Nombre del producto</a>
                         <p>$150 MXN</p>
