--- a/views/superAdministrador/perfil.css
+++ b/views/superAdministrador/perfil.css
@@ -127,3 +127,21 @@ body {
     background-color: #ffcc00;
     color: #333;
 }
+
+/* Responsive */
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        gap: 15px;
+        padding: 15px;
+    }
+    
+    .search-container {
+        width: 100%;
+    }
+    
+    .search-bar {
+        width: 100%;
+    }
+    
+}
