--- a/views/cliente/busqueda.html
+++ b/views/cliente/busqueda.html
@@ -6,6 +6,8 @@
     <title>Resultados de Búsqueda</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="busqueda.css">
 </head>
 <body>
