--- a/views/cliente/main.html
+++ b/views/cliente/main.html
@@ -6,6 +6,8 @@
     <title>Dashboard</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
