--- a/views/cliente/busqueda.html
+++ b/views/cliente/busqueda.html
@@ -25,7 +25,7 @@
 
         <ul class="nav-links">
             <li><a href="social.html">Social</a></li>
-            <li><a href="#">Compras</a></li>
+            <li><a href="compra.html">Compras</a></li>
             <li><a href="perfil.php">Perfil</a></li>
             <li><a href="chat.html">Chat</a></li>
             <li>
