--- a/views/cliente/compra.html
+++ b/views/cliente/compra.html
@@ -126,7 +126,7 @@
                                     <i class="fas fa-star" data-index="5"></i>
                                 </div>
                             </td>
-                            <td><input type="text" id="comentario" name="comentario" placeholder="Escribe tu comentario"></td>
+                            <td><input type="text" class="comentario" name="comentario" placeholder="Escribe tu comentario"></td>
                         </tr>
 
                         <tr>
@@ -142,14 +142,13 @@
                                     <i class="fas fa-star" data-index="5"></i>
                                 </div>
                             </td>
-                            <td><input type="text" id="comentario" name="comentario" placeholder="Escribe tu comentario"></td>
+                            <td><input type="text" class="comentario" name="comentario" placeholder="Escribe tu comentario"></td>
                         </tr>
                         
                     </tbody>
                 </table>
+                <button id="calificar-btn">Calificar</button>
             </div>
-
-            <button id="calificar-btn">Calificar</button>
         </section>
 
     </main>
