--- a/views/cliente/chat.html
+++ b/views/cliente/chat.html
@@ -41,14 +41,13 @@
         <aside id="chats_container">
             <div class="chat-list-header">
                 <h2>Conversaciones</h2>
-                <button class="new-chat-btn"><i class="fas fa-plus"></i> Nuevo chat</button>
             </div>
             
             <div class="chat-search">
                 <input type="text" placeholder="Buscar conversaciones...">
                 <i class="fas fa-search"></i>
             </div>
-            
+
             <ul class="chat-list">
                 <li class="chat-item active">
                     <div class="chat-avatar">
@@ -61,7 +60,6 @@
                     </div>
                     <div class="chat-meta">
                         <span class="time">12:30</span>
-                        <span class="unread">2</span>
                     </div>
                 </li>
                 
@@ -138,6 +136,20 @@
                     </div>
                     <span class="message-time">10:22</span>
                 </div>
+
+                <div class="message message-received">
+                    <div class="offer-content">
+                        
+                        <span>Precio: $100 MXN</span>
+                        <p>
+                            Descripción: El juego está en perfecto estado, sin rayones ni fallas. Incluye caja y manual.
+                        </p>
+                        <button class="button-approve"><i class="fas fa-check"></i></button>
+                        <button class="button-disapprove"><i class="fas fa-times"></i></button>
+                    </div>
+                    <span class="message-time">10:25</span>
+                </div>
+
             </div>
 
             <div id="inputMensaje" class="message-input">
