--- a/views/vendedor/chat.html
+++ b/views/vendedor/chat.html
@@ -30,7 +30,6 @@
         <aside id="chats_container">
             <div class="chat-list-header">
                 <h2>Conversaciones</h2>
-                <button class="new-chat-btn"><i class="fas fa-plus"></i> Nuevo chat</button>
             </div>
             
             <div class="chat-search">
@@ -50,7 +49,6 @@
                     </div>
                     <div class="chat-meta">
                         <span class="time">12:30</span>
-                        <span class="unread">2</span>
                     </div>
                 </li>
                 
@@ -127,14 +125,50 @@
                     </div>
                     <span class="message-time">10:22</span>
                 </div>
+
+                <div class="message message-sent">
+                    <div class="offer-content">
+                        
+                        <span>Precio: $100 MXN</span>
+                        <p>
+                            Descripción: El juego está en perfecto estado, sin rayones ni fallas. Incluye caja y manual.
+                        </p>
+                        <button class="button-cancel"><i class="fas fa-times"></i></button>
+                    </div>
+                    <span class="message-time">10:25</span>
+                </div>
+
             </div>
 
             <div id="inputMensaje" class="message-input">
                 <input type="text" id="mensaje" placeholder="Escribe un mensaje...">
-                <button class="send-btn"><i class="fas fa-paper-plane"></i></button>
+
+                <button title="Hacer una oferta" class="offer-btn"><i class="fa-solid fa-envelope"></i></button>
+                <button title="Enviar mensaje" class="send-btn"><i class="fas fa-paper-plane"></i></button>
             </div>
         </section>
     </div>
 
+    <!-- Overlay y el Popup -->
+    <div class="popup-overlay" id="popupOverlay"></div>
+    <div class="oferta-container" style="display: none;">
+        <div class="oferta-header">
+            <h2>Hacer una oferta</h2>
+            <button class="close-btn"><i class="fas fa-times"></i></button>
+        </div>
+        
+        <form id="oferta-form" action="#" method="POST">
+            <label for="precio">Precio:</label>
+            <input type="number" id="precio" name="precio" required>
+
+            <label for="descripcion">Descripción:</label>
+            <textarea id="descripcion" name="descripcion" rows="4" required></textarea>
+
+            <button title="Enviar mensaje" class="send-btn">Enviar oferta</i></button>
+        </form>
+
+    </div>
+
+    <script src="chat.js"></script>
 </body>
 </html>
