--- a/views/registro.css
+++ b/views/registro.css
@@ -27,12 +27,28 @@ h3 {
     color: whitesmoke;
 }
 
+/* Título */
+p, a {
+    margin-bottom: 20px;
+    font-size: 16px;
+    color: whitesmoke;
+}
+
+a {
+    text-decoration: none;
+    color: #ffcc00;
+    font-weight: bold;
+}
+a:hover {
+    text-decoration: underline;
+}
+
 /* Campos de entrada */
 input[type="email"],
 input[type="text"],
 input[type="password"],
 input[type="date"] {
-    width: 100%;
+    width: 90%;
     padding: 10px;
     margin: 10px 0;
     border: 1px solid #aaa;
