--- a/views/registro.html
+++ b/views/registro.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="registro.css">
     <title>Registro</title>
 </head>
@@ -11,7 +13,11 @@
 <body>
     <section id="registroSection">
         <div class="contenedorForm">
-            <h3>Registro</h3>
+
+            <div class="header">
+                <h3>Registro</h3>
+                <p>¿Ya tienes cuenta? <a href="index.php">Inicia sesión</a></p>
+            </div>
             <form id="formRegistro" action="../controllers/registroUsuario.php" method="post" enctype="multipart/form-data">
                 <input type="email" id="email" placeholder="correo" name="email">
                 <input type="text" id="usuario" placeholder="usuario" name="usuario">
