--- a/views/registro.html
+++ b/views/registro.html
@@ -18,20 +18,23 @@
                 <h3>Registro</h3>
                 <p>¿Ya tienes cuenta? <a href="index.php">Inicia sesión</a></p>
             </div>
+            
             <form id="formRegistro" action="../controllers/registroUsuario.php" method="post" enctype="multipart/form-data">
-                <input type="email" id="email" placeholder="correo" name="email">
-                <input type="text" id="usuario" placeholder="usuario" name="usuario">
-                <input type="password" id="password" placeholder="contraseña" name="pass">
-
+                <input type="email" id="email" placeholder="correo" name="email" required>
+                <div id="email-error" class="error-message"></div>
+                <input type="text" id="usuario" placeholder="usuario" name="usuario" required>
+                <div id="usuario-error" class="error-message"></div>
+                <input type="password" id="password" placeholder="contraseña" name="pass" required>
+                <div id="pass-error" class="error-message"></div>
                 <img class="ImageLoaded" src="../multimedia/default/default.jpg" id="profile-image">
                 <label for="input-file">Eliga una imagen</label>
                 <input type="file" accept="image/*" id="input-file" name="avatar">
 
-                <input type="text" id="nombres" placeholder="Nombres" name="nombres">
-                <input type="text" id="paterno" placeholder="Apellido paterno" name="paterno">
-                <input type="text" id="materno" placeholder="Apellido materno" name="materno">
+                <input type="text" id="nombres" placeholder="Nombres" name="nombres" required>
+                <input type="text" id="paterno" placeholder="Apellido paterno" name="paterno" required>
+                <input type="text" id="materno" placeholder="Apellido materno" name="materno" required>
 
-                <input type="date" id="nacimiento" name="nacimiento">
+                <input type="date" id="nacimiento" name="nacimiento" required>
 
                 <div class="rol">
                     <h3>Rol de usuario</h3>
